syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/api/http.proto";

package spotify;
option csharp_namespace = "Spotify.ToDoAlbum";

service ToDoAlbumService{

  rpc GetAlbum (GetAlbumRequest) returns (AlbumsResponse){
    option (google.api.http) = {
      get: "/v1/albums"
      additional_bindings{
        get: "/v1/albums/{id}"
      }
    };
  }

  rpc GetFavoriteAlbums (GetFavoriteAlbumsRequest) returns (AlbumsResponse){
    option (google.api.http) = {
      get: "/v1/me/albums"
    };
  }

  rpc GetArtistAlbums (GetArtistAlbumsRequest) returns (AlbumsResponse){
    option (google.api.http) = {
      get: "/v1/artists/{artist_id}/albums"
    };
  }

  rpc SearchAlbums (SearchAlbumsRequest) returns (AlbumsResponse){
    option (google.api.http) = {
      get: "/v1/search"
    };
  }
}

message Image {
  int32 height = 1;
  string url = 2;
  int32 width = 3;
}
// Модель альбому
message Album {
  string id = 1;
  string name = 2;
  repeated string artists = 3;  // Імена артистів
  string release_date = 4;
  int32 popularity = 5;
  int32 total_tracks = 6;      // Кількість треків в альбомі
  string album_type = 7;       // Тип альбому (album, single, compilation)
  string spotify_url = 8;      // Посилання на альбом в Spotify
  string image_url = 9;        // URL головного зображення
  repeated Image images = 10;  // Всі зображення альбому
}

//Запит для отримання відповіді
message GetAlbumRequest {
  string album_id = 1;
}

message GetFavoriteAlbumsRequest {
  // Empty request as we'll use the authenticated user's context
}

message GetArtistAlbumsRequest {
  string artist_id = 1;
}

message GetMultipleAlbumsRequest {
  repeated string album_ids = 1;
}

message SearchAlbumsRequest {
  string query = 1;
}

// Відповідь, яка містить список альбомів
message AlbumsResponse {
  repeated Album albums = 1;
}